k8s/samplewebappingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-d2
spec:
  selector:
    matchLabels:
      app: webappa
  replicas: 10
  template:
    metadata:
      labels:
        app: webappa
    spec:
      containers:
      - name: webappa
        image: techfellow/webappa:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
          requests:
            memory: "32Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webappa-lb
spec:
  selector:
    app: webappa
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webappa-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /ip/
spec:
  ingressClassName: webappa
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webappa-lb
            port:
              number: 80
